zed-mlmd/grammars/mlmd/test/corpus/basics.txt
================================================================================
Comment
================================================================================
# this is a comment
--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Simple block (no params)
================================================================================
ReLU
--------------------------------------------------------------------------------

(source_file
  (chain
    (block
      (block_type))))

================================================================================
Block with params
================================================================================
Conv2d(filters=64, kernel=3)
--------------------------------------------------------------------------------

(source_file
  (chain
    (block
      (block_type)
      (params
        (params_open)
        (param
          (param_key)
          (number))
        (param
          (param_key)
          (number))
        (params_close)))))

================================================================================
Simple arrow chain
================================================================================
Input -> Conv2d(filters=6) -> Output
--------------------------------------------------------------------------------

(source_file
  (chain
    (block
      (block_type))
    (arrow)
    (block
      (block_type)
      (params
        (params_open)
        (param
          (param_key)
          (number))
        (params_close)))
    (arrow)
    (block
      (block_type))))

================================================================================
Group declaration
================================================================================
[[ LeNet5 ]]
--------------------------------------------------------------------------------

(source_file
  (group_declaration
    (group_open)
    (block_type)
    (group_close)))

================================================================================
Group with path
================================================================================
[[ ResNet50 > Bottleneck ]]
--------------------------------------------------------------------------------

(source_file
  (group_declaration
    (group_open)
    (block_type)
    (block_type)
    (group_close)))

================================================================================
Tensor fork
================================================================================
Input -> [main, skip]
--------------------------------------------------------------------------------

(source_file
  (chain
    (block
      (block_type))
    (arrow)
    (tensor_ref
      (identifier)
      (identifier))))

================================================================================
Tensor join
================================================================================
[a, b] -> Add
--------------------------------------------------------------------------------

(source_file
  (chain
    (tensor_ref
      (identifier)
      (identifier))
    (arrow)
    (block
      (block_type))))

================================================================================
Block with shape param
================================================================================
Input(shape=(1,28,28))
--------------------------------------------------------------------------------

(source_file
  (chain
    (block
      (block_type)
      (params
        (params_open)
        (param
          (param_key)
          (shape_value
            (number)
            (number)
            (number)))
        (params_close)))))

================================================================================
Multi-line chain
================================================================================
Input
-> Conv2d(filters=32)
-> ReLU
-> Flatten
-> Linear(out=10)
--------------------------------------------------------------------------------

(source_file
  (chain
    (block
      (block_type))
    (arrow)
    (block
      (block_type)
      (params
        (params_open)
        (param
          (param_key)
          (number))
        (params_close)))
    (arrow)
    (block
      (block_type))
    (arrow)
    (block
      (block_type))
    (arrow)
    (block
      (block_type)
      (params
        (params_open)
        (param
          (param_key)
          (number))
        (params_close)))))
